Fix survey button on mobile

--- a/src/App.scss
+++ b/src/App.scss
@@ -62,7 +62,8 @@
     }
 
     .btn-primary{
-      padding: 0 6px;
+      padding: 0 4px;
+      text-align: center;
     }
 
     nav{
